fix(validation): make final-hardening repeatable and current-contract
Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>